assets/css/cv-articles.css
:root {
  --grid-col-gap: 3em;
  --grid-cols: 13;
  --grid-row-gap: 1em;
}

.cv article ul {
  line-height: 1.5;
  margin: 0 0 1.5em 0;
  padding: 0 0 0 1.4rem;
}

.cv article ul li {
  font-size: var(--text-size-paragraph-mobile);
  margin-top: 0.75em;
}

@media (min-width: 1280px) {
  .cv article ul li {
    font-size: 1.4rem;
  }
}

@media (max-width: 1279px) {
  .education .cv-section-wrapper .cv-section,
  .experience .cv-section-wrapper .cv-section,
  .skill .cv-section-wrapper .cv-section,
  .tool .cv-section-wrapper .cv-section {
    display: none;
  }

  .education article,
  .experience article,
  .skill article,
  .tool article {
    height: 100vh;
    bottom: 6rem;
    position: absolute;
    top: 6rem;
    transition: top ease-in-out 0.5s;
    width: calc(100vw - 2.8em);
  }

  body.cv:has(.hamb.active) main .cv-section-wrapper article {
    top: 10rem;
  }

  .cv-section-wrapper article header {
    display: flex;
    flex: inherit;
    align-items: baseline;
    justify-content: space-between;
    line-height: 1;
    padding: 2em 0;
  }
}

.cv-section-wrapper article h1 {
  margin: 0;
}

.cv-section-wrapper article figure {
  margin: 0;
}

.cv-section-wrapper article figure img {
  display: block;
  margin: 0 auto;
}

@media (max-width: 1279px) {
  .cv-section-wrapper article figure img {
    max-width: 67%;
  }
}

.cv-section-wrapper article p {
  font-size: var(--text-size-paragraph-mobile);
  line-height: 1.5;
  margin: 0;
}

@media (min-width: 1280px) {
  .cv-section-wrapper article p {
    font-size: var(--text-size-paragraph);
  }
}

.cv-section-wrapper article p + p {
  margin-top: 1em;
}

.cv-section-wrapper article .meta {
  font-size: 0.85rem;
  line-height: 1;
}

.cv-section-wrapper article ol {
  font-size: var(--text-size-paragraph-mobile);
  line-height: 1.5;
  margin: 0.5em 0 0 0.5em;
}

.cv-section-wrapper article ol ol {
  list-style-type: lower-alpha;
}

.cv-section-wrapper article ol ol ol {
  list-style-type: lower-roman;
}

.cv-section-wrapper article footer {
  margin: 2rem 0;
  padding: var(--single-column-padding-top) 0;
}

@media (min-width: 1280px) {
  .cv-section-wrapper > article:not(:empty) {
    display: grid;
    gap: var(--grid-row-gap) var(--grid-col-gap);
    grid-template-columns: repeat(8, minmax(0, 1fr));
    grid-template-rows: subgrid;
    grid-column: 5 / span 8;

    header {
      grid-column: 1 / span 5;
      grid-row: 1;
      align-self: start;

      h1 {
        grid-column: 1 / span 4;
        grid-row: 1 / span 1;
      }
    }

    footer {
      margin: 0;
    }
  }

  .cv-section-wrapper > article figure {
    grid-column: 6 / span 3;
    grid-row-start: 1;
    align-self: start;
  }

  .cv-section-wrapper > article figure img {
    max-width: 100%; /* or any custom size */
    max-height: 100%;
    object-fit: contain;
  }

  .cv-section-wrapper > article .content {
    grid-column: 1 / span 5;
    grid-row: 2 / span 10;
    overflow-y: scroll;
    padding-right: 1em;
  }

  .cv-section-wrapper > article .content,
  .cv-section-wrapper > article .content::-webkit-scrollbar-thumb:hover {
    scrollbar-color: var(--cv-blue-foreground)
      rgba(var(--cv-blue-background-rgb), 0.15);
  }

  .cv-section-wrapper > article ol,
  .cv-section-wrapper > article p {
    font-size: 1.4rem;
    line-height: 2.5;
  }

  .cv-section-wrapper > article ol ol {
    font-size: 1em;
    line-height: 2;
  }
}

